<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_background"
    tools:context=".ui.marchandise.SuiviMarchFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="279dp"
        android:layout_height="44dp"
        android:layout_marginTop="64dp"
        android:text="@string/suivi_march"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/suivi3"
        android:layout_width="233dp"
        android:layout_height="52dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/suivi3"
        app:layout_constraintBottom_toTopOf="@+id/suivi1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.625" />

    <TextView
        android:id="@+id/suivi2"
        android:layout_width="214dp"
        android:layout_height="57dp"
        android:layout_marginBottom="372dp"
        android:gravity="center"
        android:text="@string/suivi2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/suivi1"
        android:layout_width="209dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/suivi1"
        app:layout_constraintBottom_toTopOf="@+id/suivi2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>